[package]
name = "parallel-backtest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/worker/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"


[dependencies]
anyhow = "1.0.86"
flume = { version = "0.11.0", features = ["async"] }
num_cpus = "1.16.0"
prost = "0.13.1"
time = { version = "0.3.36", features = ["macros", "parsing", "serde"] }
tokio = { version = "1.43.1", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tonic = { version = "0.12.2", features = ["codegen", "gzip"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
tonic-build = "*"
